# robotics_project

./: .gitignore  CMakeLists.txt  README.md  coord_math.py  draw_density_map.py  dynamic_agent_strategy.py  enviornment.py  eploring_agent.py  exploring_agent.py  follow_path_strategy.py  get_visibility_graph.py  gtsp.py  main.py  package.xml  parse_svg.py  plot_weights.py  process_all.py  rock_paper_scisors.py  setup_env.sh  static_pathing.py  svg_to_json.py  visibility.py
enviornments/: cluttered.graph.json  cluttered.json  house.graph.json  house.json  many_guards.graph.json  many_guards.json  maze.json  small_env.graph.json  small_env.json  small_env.svg.json  static_guards.json  winding_path.graph.json  winding_path.json
environments/: cluttered.json  cluttered.svg.json  house.json  house.svg.json  many_guards.json  many_guards.svg.json  single_guard_house.json  small_env.json  winding_path.graph.json  winding_path.json  winding_path.svg.json
example_videos/: many_guards.json_report.csv
fast_game_calc/: CMakeLists.txt  build.sh  cnpy.cpp  cnpy.h  main.cpp
fast_game_calc/qt_proj/: .gitignore  main.cpp
launch/: simple_world.launch
msg/: ai_result.msg  env_position_broadcast.msg  named_position.msg  scan_msg.msg
no_prior_reports/: cluttered.json_report.csv  house.json_report.csv  many_guards.json_report.csv  small_env.json_report.csv  winding_path.json_report.csv
old_2d_env/: agent_ai.py  coord_math.py  env_lib.py  exploring_agent_ai.py  test_main.py
old_reports/: cluttered.json_report.csv  house.json_report.csv  many_guards.json_report.csv  (+2 more)
(+24 files in other folders)
